feat: Refactor Header and Hero components for improved styling and functionality
- Updated Header component to remove unnecessary state and streamline theme handling.
- Enhanced Hero component layout with new background effects and improved responsiveness.
- Introduced ProjectCard component for better project representation.
- Modified Projects component to utilize ProjectCard and improve project display.
- Added ProjectsGrid component to showcase all projects in a grid layout.
- Created ResumePreview component for displaying and downloading resume.
- Revamped Skills component to use tabs for better organization of skills and technologies.
- Added Techstack component to display technology icons with animations.
- Implemented ThemeProvider for managing theme state across the application.
- Created reusable Dialog component for modal functionality.
- Updated portfolioData.json to include new projects and technology icons.
- Enhanced tailwind.config.js with new animations and responsive breakpoints.

--- a/index.html
+++ b/index.html
@@ -2,56 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/picofme.png" href="./src/assets/picofme.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Frontend Web Developer | React, Next.js, Tailwind CSS Expert</title>
+    <title>FullStack Web Developer | React, Next.js, Tailwind CSS Expert</title>
     <meta
       name="title"
-      content="Frontend Web Developer | React, Next.js, Tailwind CSS Expert"
+      content="FullStack Web Developer | React, Next.js, Tailwind CSS Expert"
     />
     <meta
       name="description"
-      content="Experienced frontend developer specializing in building beautiful and highly performant web applications with modern technologies like React, Next.js, and Tailwind CSS."
+      content="Experienced FullStack developer specializing in building beautiful and highly performant web applications with modern technologies like React, Next.js, and Tailwind CSS."
     />
     <meta
       name="keywords"
-      content="frontend developer, web development, React, Next.js, Tailwind CSS, JavaScript, portfolio"
+      content="fullstack developer, web development, React, Next.js, Tailwind CSS, JavaScript, portfolio"
     />
-    <meta name="author" content="Your Name" />
+    <meta name="author" content="Pravat Behera" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:url" content="https://pravat.tech/" />
     <meta
       property="og:title"
-      content="Frontend Web Developer | React, Next.js, Tailwind CSS Expert"
+      content="FullStack Web Developer | React, Next.js, Tailwind CSS Expert"
     />
     <meta
       property="og:description"
-      content="Experienced frontend developer specializing in building beautiful and highly performant web applications with modern technologies like React, Next.js, and Tailwind CSS."
+      content="Experienced FullStack developer specializing in building beautiful and highly performant web applications with modern technologies like React, Next.js, and Tailwind CSS."
     />
-    <meta property="og:image" content="https://yourwebsite.com/og-image.jpg" />
+    <!-- <meta property="og:image" content="https://pravat.tech/og-image.jpg" /> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yourwebsite.com/" />
+    <meta property="twitter:url" content="https://pravat.tech/" />
     <meta
       property="twitter:title"
-      content="Frontend Web Developer | React, Next.js, Tailwind CSS Expert"
+      content="FullStack Web Developer | React, Next.js, Tailwind CSS Expert"
     />
     <meta
       property="twitter:description"
-      content="Experienced frontend developer specializing in building beautiful and highly performant web applications with modern technologies like React, Next.js, and Tailwind CSS."
+      content="Experienced FullStack developer specializing in building beautiful and highly performant web applications with modern technologies like React, Next.js, and Tailwind CSS."
     />
-    <meta
-      property="twitter:image"
-      content="https://yourwebsite.com/og-image.jpg"
-    />
+    <meta property="twitter:image" content="https://pravat.tech/og-image.jpg" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourwebsite.com/" />
+    <link rel="canonical" href="https://pravat.tech/" />
 
     <!-- Preconnect to important third-party resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
