feat: Update favicon and replace avatar references with new image path

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/picofme.png" href="./src/assets/picofme.png" />
+    <link rel="icon" type="image/picofme.png" href="/pravat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
     <title>FullStack Web Developer | React, Next.js, Tailwind CSS Expert</title>
     <meta
       name="title"
